metadata/force-app/main/default/objects/CustomName_BywvL__c/CustomName_BywvL__c.object-meta.xml
<CustomObject>
    <description>Description_LIIzd</description>
    <label>CustomLabel_FWDBG</label>
    <nameField>
        <label>CustomLabel_FWDBG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_FWDBGs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>