metadata/force-app/main/default/objects/CustomName_BywvL__c/fields/CustomField_vPQbJ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_vPQbJ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldaWwOx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>